[package]
name = "alvr-743-check"
version = "0.1.0"
authors = ["ckie <git-525ff67@ckie.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
semver = { version =  "0.11", features = [ "serde" ]}
older = { version =  "1", features = [ "serde" ], package = "semver"}
serde = "1.0.126"
